src/test/ui/structs/struct-fields-shorthand.stderr
error[E0560]: struct `Foo` has no field named `z`
  --> $DIR/struct-fields-shorthand.rs:19:15
   |
LL |         x, y, z //~ ERROR struct `Foo` has no field named `z`
   |               ^ `Foo` does not have this field
   |
   = note: available fields are: `x`, `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
